修复配送问题