@@ -1,19 +1,26 @@
 package cn.iocoder.yudao.module.trade.service.order;
 
+import cn.iocoder.yudao.framework.common.exception.ServiceException;
 import cn.iocoder.yudao.module.member.api.address.MemberAddressApi;
 import cn.iocoder.yudao.module.product.api.sku.ProductSkuApi;
 import cn.iocoder.yudao.module.product.api.sku.dto.ProductSkuRespDTO;
 import cn.iocoder.yudao.module.product.api.spu.ProductSpuApi;
 import cn.iocoder.yudao.module.product.api.spu.dto.ProductSpuRespDTO;
+import cn.iocoder.yudao.module.product.enums.spu.ProductSpuStatusEnum;
 import cn.iocoder.yudao.module.publication.api.enums.BizSceneEnum;
 import cn.iocoder.yudao.module.subscription.api.order.SubscriptionOrderEligibilityApi;
 import cn.iocoder.yudao.module.subscription.api.order.dto.SubscriptionOrderEligibilityReqDTO;
 import cn.iocoder.yudao.module.subscription.api.order.dto.SubscriptionOrderEligibilityRespDTO;
+import cn.iocoder.yudao.module.trade.controller.app.order.vo.AppTradeOrderDeliveryRespVO;
 import cn.iocoder.yudao.module.trade.controller.app.order.vo.AppTradeOrderSettlementReqVO;
+import cn.iocoder.yudao.module.trade.controller.app.order.vo.AppTradeOrderSettlementRespVO;
 import cn.iocoder.yudao.module.trade.dal.dataobject.cart.CartDO;
 import cn.iocoder.yudao.module.trade.enums.delivery.DeliveryTypeEnum;
 import cn.iocoder.yudao.module.trade.service.cart.CartService;
 import cn.iocoder.yudao.module.trade.service.order.support.TradeOrderDeliveryGroupSupport;
+import cn.iocoder.yudao.module.trade.service.price.TradePriceService;
+import cn.iocoder.yudao.module.trade.service.price.bo.TradePriceCalculateReqBO;
+import cn.iocoder.yudao.module.trade.service.price.bo.TradePriceCalculateRespBO;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -29,6 +36,7 @@ import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
@@ -40,6 +48,10 @@ class TradeOrderCheckoutServiceImplTest {
     private static final long OFFER_SKU_ID = 20L;
     private static final long PRODUCT_SKU_ID = 30L;
     private static final long PRODUCT_SPU_ID = 40L;
+    private static final long NORMAL_SKU_ID = 31L;
+    private static final long NORMAL_SPU_ID = 41L;
+    private static final int PRODUCT_PRICE = 1500;
+    private static final int EXPRESS_DELIVERY_PRICE = 500;
 
     @Mock
     private CartService cartService;
@@ -50,6 +62,8 @@ class TradeOrderCheckoutServiceImplTest {
     @Mock
     private SubscriptionOrderEligibilityApi subscriptionOrderEligibilityApi;
     @Mock
+    private TradePriceService tradePriceService;
+    @Mock
     private MemberAddressApi addressApi;
     @Spy
     private TradeOrderDeliveryGroupSupport deliveryGroupSupport = new TradeOrderDeliveryGroupSupport();
@@ -58,10 +72,9 @@ class TradeOrderCheckoutServiceImplTest {
 
     @Test
     void settlementOrder_shouldAggregateSameStudentOfferSkuBeforeEligibilityCheck() {
-        when(addressApi.getDefaultAddress(USER_ID)).thenReturn(null);
-        when(cartService.getCartList(eq(USER_ID), anySet())).thenReturn(Collections.emptyList());
-        when(productSkuApi.getSkuMap(eq(Set.of(PRODUCT_SKU_ID)))).thenReturn(Map.of(PRODUCT_SKU_ID, productSku()));
-        when(productSpuApi.getSpuMap(eq(Set.of(PRODUCT_SPU_ID)))).thenReturn(Map.of(PRODUCT_SPU_ID, publicationSpu()));
+        mockNoDefaultAddress();
+        mockProducts(Map.of(PRODUCT_SKU_ID, productSku(PRODUCT_SKU_ID, PRODUCT_SPU_ID)),
+                Map.of(PRODUCT_SPU_ID, publicationSpu(List.of(DeliveryTypeEnum.EXPRESS.getType()))));
         when(subscriptionOrderEligibilityApi.validateOrder(any())).thenAnswer(invocation -> {
             SubscriptionOrderEligibilityReqDTO reqDTO = invocation.getArgument(0);
             if (reqDTO.getCount() > 1) {
@@ -80,44 +93,253 @@ class TradeOrderCheckoutServiceImplTest {
                 .map(SubscriptionOrderEligibilityReqDTO::getCount).toList());
     }
 
+    @Test
+    void settlementOrder_shouldAllowPublicationStationWhenSkuSupportsExpressAndStation() {
+        mockNoDefaultAddress();
+        mockProducts(Map.of(PRODUCT_SKU_ID, productSku(PRODUCT_SKU_ID, PRODUCT_SPU_ID)),
+                Map.of(PRODUCT_SPU_ID, publicationSpu(List.of(
+                        DeliveryTypeEnum.EXPRESS.getType(), DeliveryTypeEnum.STATION.getType()))));
+        when(subscriptionOrderEligibilityApi.validateOrder(any())).thenReturn(eligibility());
+        mockCalculateOrderPrice();
+
+        AppTradeOrderSettlementReqVO reqVO = new AppTradeOrderSettlementReqVO();
+        reqVO.setPointStatus(false);
+        reqVO.setItems(List.of(publicationItem(DeliveryTypeEnum.STATION.getType())));
+        AppTradeOrderSettlementRespVO respVO = tradeOrderCheckoutService.settlementOrder(USER_ID, reqVO);
+
+        assertEquals(1, respVO.getDeliveries().size());
+        assertEquals(DeliveryTypeEnum.STATION.getType(), respVO.getDeliveries().get(0).getDeliveryType());
+        assertEquals(300L, respVO.getDeliveries().get(0).getStationId());
+        assertEquals(0, respVO.getPrice().getDeliveryPrice());
+    }
+
+    @Test
+    void settlementOrder_shouldAllowStationPublicationAndPickUpNormalMixed() {
+        mockNoDefaultAddress();
+        mockProducts(Map.of(
+                        PRODUCT_SKU_ID, productSku(PRODUCT_SKU_ID, PRODUCT_SPU_ID),
+                        NORMAL_SKU_ID, productSku(NORMAL_SKU_ID, NORMAL_SPU_ID)),
+                Map.of(
+                        PRODUCT_SPU_ID, publicationSpu(List.of(DeliveryTypeEnum.STATION.getType())),
+                        NORMAL_SPU_ID, normalSpu(List.of(DeliveryTypeEnum.PICK_UP.getType()))));
+        when(subscriptionOrderEligibilityApi.validateOrder(any())).thenReturn(eligibility());
+        mockCalculateOrderPrice();
+
+        AppTradeOrderSettlementReqVO reqVO = new AppTradeOrderSettlementReqVO();
+        reqVO.setPointStatus(false);
+        reqVO.setPickUpStoreId(1000L);
+        reqVO.setItems(List.of(
+                publicationItem(DeliveryTypeEnum.STATION.getType()),
+                normalItem(DeliveryTypeEnum.PICK_UP.getType())));
+        AppTradeOrderSettlementRespVO respVO = tradeOrderCheckoutService.settlementOrder(USER_ID, reqVO);
+
+        assertEquals(2, respVO.getDeliveries().size());
+        assertEquals(Set.of(DeliveryTypeEnum.STATION.getType(), DeliveryTypeEnum.PICK_UP.getType()),
+                Set.copyOf(respVO.getDeliveries().stream()
+                        .map(AppTradeOrderDeliveryRespVO::getDeliveryType).toList()));
+        assertEquals(0, respVO.getPrice().getDeliveryPrice());
+    }
+
+    @Test
+    void settlementOrder_shouldRejectUnsupportedItemDeliveryType() {
+        mockNoDefaultAddress();
+        mockProducts(Map.of(PRODUCT_SKU_ID, productSku(PRODUCT_SKU_ID, PRODUCT_SPU_ID)),
+                Map.of(PRODUCT_SPU_ID, publicationSpu(List.of(DeliveryTypeEnum.EXPRESS.getType()))));
+
+        AppTradeOrderSettlementReqVO reqVO = new AppTradeOrderSettlementReqVO();
+        reqVO.setPointStatus(false);
+        reqVO.setItems(List.of(publicationItem(DeliveryTypeEnum.STATION.getType())));
+
+        assertThrows(ServiceException.class,
+                () -> tradeOrderCheckoutService.settlementOrder(USER_ID, reqVO));
+        verify(subscriptionOrderEligibilityApi, never()).validateOrder(any());
+    }
+
+    @Test
+    void settlementOrder_shouldCalculateExpressDeliveryOnlyForExpressGroup() {
+        mockNoDefaultAddress();
+        mockProducts(Map.of(
+                        PRODUCT_SKU_ID, productSku(PRODUCT_SKU_ID, PRODUCT_SPU_ID),
+                        NORMAL_SKU_ID, productSku(NORMAL_SKU_ID, NORMAL_SPU_ID)),
+                Map.of(
+                        PRODUCT_SPU_ID, publicationSpu(List.of(DeliveryTypeEnum.STATION.getType())),
+                        NORMAL_SPU_ID, normalSpu(List.of(DeliveryTypeEnum.EXPRESS.getType()))));
+        when(subscriptionOrderEligibilityApi.validateOrder(any())).thenReturn(eligibility());
+        mockCalculateOrderPrice();
+
+        AppTradeOrderSettlementReqVO reqVO = new AppTradeOrderSettlementReqVO();
+        reqVO.setPointStatus(false);
+        reqVO.setItems(List.of(
+                publicationItem(DeliveryTypeEnum.STATION.getType()),
+                normalItem(DeliveryTypeEnum.EXPRESS.getType())));
+        AppTradeOrderSettlementRespVO respVO = tradeOrderCheckoutService.settlementOrder(USER_ID, reqVO);
+
+        assertEquals(2, respVO.getDeliveries().size());
+        assertEquals(EXPRESS_DELIVERY_PRICE, respVO.getPrice().getDeliveryPrice());
+        assertTrue(respVO.getDeliveries().stream()
+                .filter(delivery -> DeliveryTypeEnum.STATION.getType().equals(delivery.getDeliveryType()))
+                .allMatch(delivery -> delivery.getDeliveryPrice() == 0));
+    }
+
     private AppTradeOrderSettlementReqVO settlementReq() {
         AppTradeOrderSettlementReqVO reqVO = new AppTradeOrderSettlementReqVO();
         reqVO.setPointStatus(false);
-        reqVO.setItems(List.of(publicationItem(), publicationItem()));
+        reqVO.setItems(List.of(publicationItem(DeliveryTypeEnum.EXPRESS.getType()),
+                publicationItem(DeliveryTypeEnum.EXPRESS.getType())));
         return reqVO;
     }
 
-    private AppTradeOrderSettlementReqVO.Item publicationItem() {
+    private AppTradeOrderSettlementReqVO.Item publicationItem(Integer deliveryType) {
         AppTradeOrderSettlementReqVO.Item item = new AppTradeOrderSettlementReqVO.Item();
         item.setSkuId(PRODUCT_SKU_ID);
         item.setCount(1);
         item.setStudentId(STUDENT_ID);
         item.setOfferSkuId(OFFER_SKU_ID);
-        item.setDeliveryType(DeliveryTypeEnum.EXPRESS.getType());
+        item.setDeliveryType(deliveryType);
         return item;
     }
 
-    private ProductSkuRespDTO productSku() {
+    private AppTradeOrderSettlementReqVO.Item normalItem(Integer deliveryType) {
+        AppTradeOrderSettlementReqVO.Item item = new AppTradeOrderSettlementReqVO.Item();
+        item.setSkuId(NORMAL_SKU_ID);
+        item.setCount(1);
+        item.setDeliveryType(deliveryType);
+        return item;
+    }
+
+    private ProductSkuRespDTO productSku(Long skuId, Long spuId) {
         ProductSkuRespDTO sku = new ProductSkuRespDTO();
-        sku.setId(PRODUCT_SKU_ID);
-        sku.setSpuId(PRODUCT_SPU_ID);
+        sku.setId(skuId);
+        sku.setSpuId(spuId);
+        sku.setPrice(PRODUCT_PRICE);
+        sku.setStock(100);
         return sku;
     }
 
-    private ProductSpuRespDTO publicationSpu() {
+    private ProductSpuRespDTO publicationSpu(List<Integer> deliveryTypes) {
+        return spu(PRODUCT_SPU_ID, BizSceneEnum.PUBLICATION.getCode(), deliveryTypes);
+    }
+
+    private ProductSpuRespDTO normalSpu(List<Integer> deliveryTypes) {
+        return spu(NORMAL_SPU_ID, BizSceneEnum.NORMAL.getCode(), deliveryTypes);
+    }
+
+    private ProductSpuRespDTO spu(Long spuId, String bizScene, List<Integer> deliveryTypes) {
         ProductSpuRespDTO spu = new ProductSpuRespDTO();
-        spu.setId(PRODUCT_SPU_ID);
-        spu.setBizScene(BizSceneEnum.PUBLICATION.getCode());
+        spu.setId(spuId);
+        spu.setName("测试商品" + spuId);
+        spu.setBizScene(bizScene);
+        spu.setStatus(ProductSpuStatusEnum.ENABLE.getStatus());
+        spu.setDeliveryTypes(deliveryTypes);
+        spu.setDeliveryTemplateId(deliveryTypes.contains(DeliveryTypeEnum.EXPRESS.getType()) ? 1L : null);
         return spu;
     }
 
     private SubscriptionOrderEligibilityRespDTO eligibility() {
         SubscriptionOrderEligibilityRespDTO respDTO = new SubscriptionOrderEligibilityRespDTO();
         respDTO.setStudentId(STUDENT_ID);
+        respDTO.setStudentNameSnapshot("测试学生");
+        respDTO.setSchoolId(200L);
+        respDTO.setSchoolNameSnapshot("测试学校");
+        respDTO.setClassId(201L);
+        respDTO.setClassNameSnapshot("一年级1班");
+        respDTO.setGradeCatalogId(202L);
+        respDTO.setGradeNameSnapshot("一年级");
+        respDTO.setStationId(300L);
+        respDTO.setStationNameSnapshot("测试站点");
+        respDTO.setStationAddressSnapshot("测试地址");
+        respDTO.setContactName("张老师");
+        respDTO.setContactMobile("13900000000");
         respDTO.setOfferSkuId(OFFER_SKU_ID);
         respDTO.setOfferId(100L);
         respDTO.setWindowId(200L);
         return respDTO;
+    }
+
+    private void mockNoDefaultAddress() {
+        when(addressApi.getDefaultAddress(USER_ID)).thenReturn(null);
+        when(cartService.getCartList(eq(USER_ID), anySet())).thenReturn(Collections.emptyList());
+    }
+
+    private void mockProducts(Map<Long, ProductSkuRespDTO> skuMap, Map<Long, ProductSpuRespDTO> spuMap) {
+        when(productSkuApi.getSkuMap(anySet())).thenReturn(skuMap);
+        when(productSpuApi.getSpuMap(anySet())).thenReturn(spuMap);
+    }
+
+    private void mockCalculateOrderPrice() {
+        when(tradePriceService.calculateOrderPrice(any())).thenAnswer(invocation -> {
+            TradePriceCalculateReqBO reqBO = invocation.getArgument(0);
+            return buildCalculateResp(reqBO);
+        });
+    }
+
+    private TradePriceCalculateRespBO buildCalculateResp(TradePriceCalculateReqBO reqBO) {
+        List<TradePriceCalculateRespBO.OrderItem> items = reqBO.getItems().stream()
+                .map(this::buildCalculateItem)
+                .toList();
+        TradePriceCalculateRespBO respBO = new TradePriceCalculateRespBO()
+                .setType(0)
+                .setItems(items)
+                .setPromotions(Collections.emptyList())
+                .setCoupons(Collections.emptyList())
+                .setTotalPoint(0)
+                .setUsePoint(0)
+                .setGivePoint(0)
+                .setFreeDelivery(false)
+                .setGiveCouponTemplateCounts(Collections.emptyMap());
+        int totalPrice = items.stream().mapToInt(item -> item.getPrice() * item.getCount()).sum();
+        int deliveryPrice = items.stream().mapToInt(TradePriceCalculateRespBO.OrderItem::getDeliveryPrice).sum();
+        respBO.setPrice(new TradePriceCalculateRespBO.Price()
+                .setTotalPrice(totalPrice)
+                .setDiscountPrice(0)
+                .setDeliveryPrice(deliveryPrice)
+                .setCouponPrice(0)
+                .setPointPrice(0)
+                .setVipPrice(0)
+                .setPayPrice(totalPrice + deliveryPrice));
+        return respBO;
+    }
+
+    private TradePriceCalculateRespBO.OrderItem buildCalculateItem(TradePriceCalculateReqBO.Item item) {
+        boolean publication = PRODUCT_SKU_ID == item.getSkuId();
+        Integer deliveryPrice = DeliveryTypeEnum.EXPRESS.getType().equals(item.getDeliveryType())
+                ? EXPRESS_DELIVERY_PRICE : 0;
+        return new TradePriceCalculateRespBO.OrderItem()
+                .setSkuId(item.getSkuId())
+                .setSpuId(publication ? PRODUCT_SPU_ID : NORMAL_SPU_ID)
+                .setCount(item.getCount())
+                .setCartId(item.getCartId())
+                .setSelected(Boolean.TRUE)
+                .setPrice(PRODUCT_PRICE)
+                .setDiscountPrice(0)
+                .setCouponPrice(0)
+                .setPointPrice(0)
+                .setVipPrice(0)
+                .setDeliveryPrice(deliveryPrice)
+                .setPayPrice(PRODUCT_PRICE * item.getCount() + deliveryPrice)
+                .setSpuName(publication ? "测试刊物" : "测试普通商品")
+                .setBizScene(publication ? BizSceneEnum.PUBLICATION.getCode() : BizSceneEnum.NORMAL.getCode())
+                .setDeliveryTypes(publication
+                        ? List.of(DeliveryTypeEnum.EXPRESS.getType(), DeliveryTypeEnum.STATION.getType())
+                        : List.of(DeliveryTypeEnum.EXPRESS.getType(), DeliveryTypeEnum.PICK_UP.getType()))
+                .setDeliveryTemplateId(DeliveryTypeEnum.EXPRESS.getType().equals(item.getDeliveryType()) ? 1L : null)
+                .setResolvedDeliveryType(item.getDeliveryType())
+                .setSubscriptionStudentId(item.getSubscriptionStudentId())
+                .setSubscriptionStudentNameSnapshot(item.getSubscriptionStudentNameSnapshot())
+                .setSubscriptionSchoolId(item.getSubscriptionSchoolId())
+                .setSubscriptionSchoolNameSnapshot(item.getSubscriptionSchoolNameSnapshot())
+                .setSubscriptionClassId(item.getSubscriptionClassId())
+                .setSubscriptionClassNameSnapshot(item.getSubscriptionClassNameSnapshot())
+                .setSubscriptionGradeCatalogId(item.getSubscriptionGradeCatalogId())
+                .setSubscriptionGradeNameSnapshot(item.getSubscriptionGradeNameSnapshot())
+                .setSubscriptionStationId(item.getSubscriptionStationId())
+                .setSubscriptionStationNameSnapshot(item.getSubscriptionStationNameSnapshot())
+                .setSubscriptionStationAddressSnapshot(item.getSubscriptionStationAddressSnapshot())
+                .setSubscriptionContactName(item.getSubscriptionContactName())
+                .setSubscriptionContactMobile(item.getSubscriptionContactMobile())
+                .setSubscriptionWindowId(item.getSubscriptionWindowId())
+                .setSubscriptionOfferId(item.getSubscriptionOfferId())
+                .setSubscriptionOfferSkuId(item.getSubscriptionOfferSkuId());
     }
 
 }
